--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,18 +37,26 @@
             android:name="com.chrrissoft.alarmmanager.app.OnAlarmReceiver"
             android:exported="false" />
         <receiver
-            android:name="com.chrrissoft.alarmmanager.app.BootCompleteReceiver"
+            android:name="com.chrrissoft.alarmmanager.app.ScheduleAlarmsOnBootReceiver"
             android:directBootAware="true"
+            android:enabled="false"
             android:exported="false">
             <intent-filter>
-                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
 
+        <receiver
+            android:name="com.chrrissoft.alarmmanager.app.ScheduleAlarmsOnBootLockedReceiver"
+            android:directBootAware="true"
+            android:enabled="false"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
         <service
             android:name="com.chrrissoft.alarmmanager.app.CancelRepeatingAlarmService"
             android:exported="false" />
     </application>
-
 </manifest>
